replace kg- prefix with wuf- in css, documentation, and other locations

--- a/packages/wuf-web-assets/assets/styles/material-theme.scss
+++ b/packages/wuf-web-assets/assets/styles/material-theme.scss
@@ -13,4 +13,4 @@
 @import 'mixins/themes';
 
 // Create default material design theme
-@include kg-mat-theme($primary, $accent, $danger);
+@include wuf-mat-theme($primary, $accent, $danger);
