--- a/projects/anviltech/wuf-ang-login-animated/src/lib/login.component.html
+++ b/projects/anviltech/wuf-ang-login-animated/src/lib/login.component.html
@@ -13,7 +13,7 @@
         <div class="slab slab-6 slab-highlight"></div>
         <div class="slab slab-7"></div>
     </div>
-    <div class="login-panel-wrap" kg-theme-dark="true">
+    <div class="login-panel-wrap" wuf-theme-dark="true">
         <div class="login-content-wrap" [class.active]="loginService.showPanel">
             <div class="login-titlebar">
 
