--- a/projects/anviltech/wuf-ang-smart-table/src/lib/components/pager/pager.component.scss
+++ b/projects/anviltech/wuf-ang-smart-table/src/lib/components/pager/pager.component.scss
@@ -3,7 +3,7 @@
  * Licensed under the MIT Open Source: https://opensource.org/licenses/MIT
  */
 
-.kg-smart-pagination {
+.wuf-smart-pagination {
     display: inline-flex;
     font-size: .875em;
     padding: 0;
@@ -19,7 +19,7 @@
         border: 0;
     }
 
-    .kg-smart-page-item {
+    .wuf-smart-page-item {
         display: inline;
     }
 }
