--- a/projects/anviltech/wuf-ang-smart-table/src/lib/components/thead/cells/title/title.component.scss
+++ b/projects/anviltech/wuf-ang-smart-table/src/lib/components/thead/cells/title/title.component.scss
@@ -3,7 +3,7 @@
  * Licensed under the MIT Open Source: https://opensource.org/licenses/MIT
  */
 
-a.kg-smart-sort-link {
+a.wuf-smart-sort-link {
 }
 
 .sort-icon {
