--- a/src/app/pages/app-setup/configuration/configuration.component.html
+++ b/src/app/pages/app-setup/configuration/configuration.component.html
@@ -249,7 +249,7 @@
                 <tr>
                     <td class="prop-name">id</td>
                     <td class="prop-type"><code>string</code></td>
-                    <td class="prop-default">'kg-application'</td>
+                    <td class="prop-default">'wuf-application'</td>
                     <td class="prop-description">The application ID. Combined with user ID to create a unique local
                         storage key for the configuration object.
                     </td>
