--- a/src/app/pages/branding-themes/css-properties/css-properties.component.html
+++ b/src/app/pages/branding-themes/css-properties/css-properties.component.html
@@ -30,7 +30,7 @@
 
     <h2>Colors</h2>
 
-    <p>These values can be overwritten using the <code>kg-theme-colors()</code> method. See <a
+    <p>These values can be overwritten using the <code>wuf-theme-colors()</code> method. See <a
         routerLink="/themes/themes">KION Theme System</a> documentation for more information.</p>
 
     <table class="table table-striped css-props-table">
@@ -979,7 +979,7 @@
                 RGB variants
                 <div class="description">
                     RGB variants of Main colors - Convert SCSS variables to rgb values that can be used in CSS rgb/rgba
-                    functions. It is recommended to use the kg-theme-colors() mixin from
+                    functions. It is recommended to use the wuf-theme-colors() mixin from
                     "~@anviltech/wuf-web-assets/src/assets/styles/partials/themes" to generate these
                 </div>
             </td>
@@ -1134,7 +1134,7 @@
 
     <h2>Logo</h2>
 
-    <p>These values can be overwritten using the <code>kg-theme-logo()</code> method. See <a
+    <p>These values can be overwritten using the <code>wuf-theme-logo()</code> method. See <a
         routerLink="/themes/themes">KION Theme System</a> documentation for more information.</p>
 
     <table class="table table-striped css-props-table">
@@ -1169,7 +1169,7 @@
 
     <h2>Typography</h2>
 
-    <p>These values can be overwritten using the <code>kg-theme-typography()</code> method. See <a
+    <p>These values can be overwritten using the <code>wuf-theme-typography()</code> method. See <a
         routerLink="/themes/themes">KION Theme System</a> documentation for more information.</p>
 
     <table class="table table-striped css-props-table">
