--- a/src/app/pages/branding-themes/dark-theme/dark-theme.component.html
+++ b/src/app/pages/branding-themes/dark-theme/dark-theme.component.html
@@ -31,7 +31,7 @@
         "inverted" color scheme.</p>
 
     <p>Apply the "dark theme" mode to an application, the root element (i.e., the &lt;html&gt; tag) should include the
-        attribute <code>kg-theme-dark="true"</code>:</p>
+        attribute <code>wuf-theme-dark="true"</code>:</p>
 
     <wuf-code-sample
         type="html"
@@ -40,7 +40,7 @@
 
     <p>When this attribute is set on the &lt;html&gt; the dark theme is applied automatically to any application that
         includes the <a routerLink="/setup/basestyles">WUF base styles</a>. There are a number of different ways to
-        apply the <code>kg-theme-dark</code> attribute to the &lt;html&gt; tag. In the Living Style Guide (this
+        apply the <code>wuf-theme-dark</code> attribute to the &lt;html&gt; tag. In the Living Style Guide (this
         application), the attribute is set via the following code in <code>app.component.ts</code>:</p>
 
     <wuf-code-sample
