--- a/src/app/pages/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/pages/components/breadcrumb/breadcrumb.component.html
@@ -43,8 +43,8 @@
 
         <!--start API Content -->
         <div class="component_tabs_3">
-            <p>The <code>&lt;kg-breadcrumb&gt;</code> tag is used at the application page level and placed within the
-                ,<code>&lt;kg-content-header&gt;</code> tag, as follows:</p>
+            <p>The <code>&lt;wuf-breadcrumb&gt;</code> tag is used at the application page level and placed within the
+                ,<code>&lt;wuf-content-header&gt;</code> tag, as follows:</p>
 
             <wuf-code-sample [code]="breadcrumbHtmlCode1" type="html"></wuf-code-sample>
 
@@ -89,7 +89,7 @@
                         </tr>
                     </thead>
                     <tr>
-                        <td class="propName">-kg-breadcrumb-color</td>
+                        <td class="propName">-wuf-breadcrumb-color</td>
                         <td class="description">Text color for breadcrumb trails. This color is lightened via opacity
                             for
                             non-active breadrumb links.</td>
