--- a/src/app/pages/components/dashboard/dashboard.component.scss
+++ b/src/app/pages/components/dashboard/dashboard.component.scss
@@ -47,7 +47,7 @@ table.exampleGraph {
     }
 }
 
-kg-content-header {
+wuf-content-header {
     // Make the page toolbar's shadow overlap the dashboard
     z-index: 4;
 }
