--- a/src/app/pages/components/drawer/drawer.component.html
+++ b/src/app/pages/components/drawer/drawer.component.html
@@ -68,7 +68,7 @@
                 </tbody>
             </table>
 
-            <h3>&lt;kg-drawer&gt; Properties</h3>
+            <h3>&lt;wuf-drawer&gt; Properties</h3>
 
             <table class="table prop-table">
                 <thead>
