--- a/src/app/pages/components/gridster/gridster.component.html
+++ b/src/app/pages/components/gridster/gridster.component.html
@@ -48,7 +48,7 @@
 
             <h3>Attributes</h3>
 
-            <p>The following attributes can be applied to the <code>&lt;kg-gridster&gt;</code> component:</p>
+            <p>The following attributes can be applied to the <code>&lt;wuf-gridster&gt;</code> component:</p>
 
             <table class="table prop-table">
                 <thead>
