--- a/src/app/pages/components/navigation-footer/navigation-footer.component.html
+++ b/src/app/pages/components/navigation-footer/navigation-footer.component.html
@@ -67,12 +67,12 @@
 
         <!--start API Content -->
         <div class="component_tabs_3">
-            <p>You can find the <code>&lt;kg-sidebar-footer&gt;</code> in <code>src/app/internal/layouts/main/main.component.html</code>.
+            <p>You can find the <code>&lt;wuf-sidebar-footer&gt;</code> in <code>src/app/internal/layouts/main/main.component.html</code>.
             </p>
 
             <p>By default the navigation footer displays copyright information.</p>
 
-            <p>You can override the default behavior of <code>&lt;kg-sidebar-footer&gt;</code> in one of three ways,
+            <p>You can override the default behavior of <code>&lt;wuf-sidebar-footer&gt;</code> in one of three ways,
                 using:</p>
             <ol>
                 <li>Content projection</li>
@@ -82,7 +82,7 @@
 
             <h4>Content Projection</h4>
 
-            <p>By simply adding content, to the <code>&lt;kg-sidebar-footer&gt;</code> tag, you can replace the default
+            <p>By simply adding content, to the <code>&lt;wuf-sidebar-footer&gt;</code> tag, you can replace the default
                 copyright information with content of your choice:</p>
 
             <wuf-code-sample [code]="exampleHtml1" type="html"></wuf-code-sample>
