--- a/src/app/pages/components/toolbar/toolbar.component.html
+++ b/src/app/pages/components/toolbar/toolbar.component.html
@@ -56,11 +56,11 @@
             <hr>
 
             <h3>Usage</h3>
-            <p>The <code>&lt;kg-toolbar&gt;</code> tag is created for you and automatically added to the top of an
-                application page when you use the <a routerLink="/setup/layoutcomponents">&lt;kg-content-header&gt;</a>
+            <p>The <code>&lt;wuf-toolbar&gt;</code> tag is created for you and automatically added to the top of an
+                application page when you use the <a routerLink="/setup/layoutcomponents">&lt;wuf-content-header&gt;</a>
                 component.</p>
 
-            <p>The <code>&lt;kg-toolbar&gt;</code> can be used elsewhere, including within page content, by applying the
+            <p>The <code>&lt;wuf-toolbar&gt;</code> can be used elsewhere, including within page content, by applying the
                 following to your page:</p>
 
             <wuf-code-sample [code]="toolbarHtmlCode" type="html"></wuf-code-sample>
