--- a/src/assets/dummydata/branding/brands/_still.scss
+++ b/src/assets/dummydata/branding/brands/_still.scss
@@ -20,8 +20,8 @@ of component variables that can be overridden.
 /* EXAMPLE USE OF BRANDING (KION) */
 /**********************************/
 
-:root[kg-theme="still"],
-*[kg-theme="still"] {
+:root[wuf-theme="still"],
+*[wuf-theme="still"] {
 
     /***** set color values to use in theme *****/
     $kg-brand-primary: #f68b1f;
@@ -33,7 +33,7 @@ of component variables that can be overridden.
     $kg-brand-danger: #dd2c00;
 
     /***** create a theme *****/
-    @include kg-theme-colors((
+    @include wuf-theme-colors((
         "primary": $kg-brand-primary,
         "secondary": $kg-brand-secondary,
         "accent": $kg-brand-accent,
@@ -44,10 +44,10 @@ of component variables that can be overridden.
     ));
 
     /***** logo *****/
-    //@include kg-theme-logo("/assets/images/example_images/logos/still_white.svg", 105px, 45px);
+    //@include wuf-theme-logo("/assets/images/example_images/logos/still_white.svg", 105px, 45px);
 
     /***** buttons *****/
-    @include kg-theme-button-radius(4px);
+    @include wuf-theme-button-radius(4px);
 
     /***** header *****/
     --wuf-header-bg-color: var(--wuf-color-secondary);
