--- a/packages/wuf-web-assets/assets/styles/partials/_theme-dark.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_theme-dark.scss
@@ -3,13 +3,13 @@
  * Licensed under the MIT Open Source: https://opensource.org/licenses/MIT
  */
 
-// These theme overrides are applied when the root element has a "kg-theme-dark" property set to true
+// These theme overrides are applied when the root element has a "wuf-theme-dark" property set to true
 
-:root[kg-theme-dark="true"],
-*[kg-theme-dark="true"],
-:root[kg-theme-dark="true"][kg-theme],
-*[kg-theme-dark="true"][kg-theme] {
-    // Match any root element with kg-theme set, regardless of kg-theme value, if any
+:root[wuf-theme-dark="true"],
+*[wuf-theme-dark="true"],
+:root[wuf-theme-dark="true"][wuf-theme],
+*[wuf-theme-dark="true"][wuf-theme] {
+    // Match any root element with wuf-theme set, regardless of wuf-theme value, if any
 
     /***** content area *****/
     --wuf-body-bg:                               var(--wuf-color-secondary);
