--- a/packages/wuf-web-assets/assets/styles/partials/_theme-default.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_theme-default.scss
@@ -13,21 +13,21 @@ $kg-default-logo-path: '~@anviltech/wuf-web-assets/assets/images' !default;
 }
 
 :root,
-:root[kg-theme="dematic"],
-*[kg-theme="dematic"] {
+:root[wuf-theme="dematic"],
+*[wuf-theme="dematic"] {
     /***** colors *****/
     // create default theme (Dematic)
-    @include kg-theme-colors($theme-colors);
+    @include wuf-theme-colors($theme-colors);
 
     /***** logo *****/
-    @include kg-theme-logo('#{$kg-default-logo-path}/logo.svg', 200px, 35px);
+    @include wuf-theme-logo('#{$kg-default-logo-path}/logo.svg', 200px, 35px);
 
     /***** buttons *****/
-    @include kg-theme-button-radius(4px);
+    @include wuf-theme-button-radius(4px);
 }
 
-:root[kg-theme="dematic"],
-*[kg-theme="dematic"] {
+:root[wuf-theme="dematic"],
+*[wuf-theme="dematic"] {
     // These overrides ONLY apply to the Dematic theme
 
     /***** fancy login screen *****/
