--- a/projects/anviltech/wuf-ang-smart-table/src/lib/components/thead/thead.component.html
+++ b/projects/anviltech/wuf-ang-smart-table/src/lib/components/thead/thead.component.html
@@ -3,8 +3,8 @@
   ~ Licensed under the MIT Open Source: https://opensource.org/licenses/MIT
   -->
 
-<tr kg-st-thead-titles-row *ngIf="!isHideHeader"
-    class="kg-smart-titles"
+<tr wuf-st-thead-titles-row *ngIf="!isHideHeader"
+    class="wuf-smart-titles"
     [grid]="grid"
     [isAllSelected]="isAllSelected"
     [source]="source"
@@ -12,16 +12,16 @@
     (selectAllRows)="selectAllRows.emit($event)">
 </tr>
 
-<tr kg-st-thead-filters-row *ngIf="!isHideSubHeader"
-    class="kg-smart-filters"
+<tr wuf-st-thead-filters-row *ngIf="!isHideSubHeader"
+    class="wuf-smart-filters"
     [grid]="grid"
     [source]="source"
     (create)="create.emit($event)"
     (filter)="filter.emit($event)">
 </tr>
 
-<tr kg-st-thead-form-row *ngIf="grid.createFormShown"
+<tr wuf-st-thead-form-row *ngIf="grid.createFormShown"
     [grid]="grid"
     [createConfirm]="createConfirm"
-    class="kg-smart-form-row">
+    class="wuf-smart-form-row">
 </tr>
