--- a/src/app/pages/app-setup/css-properties/css-properties.component.html
+++ b/src/app/pages/app-setup/css-properties/css-properties.component.html
@@ -34,7 +34,7 @@
 
     <h2>Colors</h2>
 
-    <p>These values can be overwritten using the <code>kg-theme-colors()</code> method. See <a
+    <p>These values can be overwritten using the <code>wuf-theme-colors()</code> method. See <a
         routerLink="/themes/themes">KION Theme System</a> documentation for more information.</p>
 
     <table class="table table-striped css-props-table">
