--- a/src/app/pages/app-setup/main-basic/main-basic.component.html
+++ b/src/app/pages/app-setup/main-basic/main-basic.component.html
@@ -54,8 +54,8 @@
         application and that can be applied to any application page:</p>
 
     <ul>
-        <li>&lt;kg-view-main&gt;</li>
-        <li>&lt;kg-view-basic&gt;</li>
+        <li>&lt;wuf-view-main&gt;</li>
+        <li>&lt;wuf-view-basic&gt;</li>
     </ul>
 
     <p>Which of these two components a page uses will determine whether that page gets the <strong>Main</strong> layout
@@ -66,29 +66,29 @@
 
     <h2>Main Layout</h2>
 
-    <p>The &lt;kg-view-main&gt; and &lt;kg-view-basic&gt; components each live within their own parent component hosted
+    <p>The &lt;wuf-view-main&gt; and &lt;wuf-view-basic&gt; components each live within their own parent component hosted
         within the application. The Quick Start application, for example, places these components at <code>/src/app/internal/layouts/</code>.
     </p>
 
-    <p>The file <code>/src/app/internal/layouts/main/<strong>main.component.html</strong></code> hosts the &lt;kg-view-main&gt;
+    <p>The file <code>/src/app/internal/layouts/main/<strong>main.component.html</strong></code> hosts the &lt;wuf-view-main&gt;
         component and looks like this:</p>
 
     <wuf-code-sample type="html" [code]="mainCodeHtml"></wuf-code-sample>
     <caption>Contents of /src/app/internal/layouts/main/main.component.html</caption>
 
-    <p>The &lt;kg-view-main&gt; takes one attribute: <strong><code>[logoRoute]</code></strong>. The logoRoute attribute
+    <p>The &lt;wuf-view-main&gt; takes one attribute: <strong><code>[logoRoute]</code></strong>. The logoRoute attribute
         is optional. If used, it takes a value for a routerLink and it is applied to the logo that appears in the
         application header. Gernerally you will want to use the application's root path (e.g. "/") so that when the user
         clicks the logo they will return to the application root.</p>
 
-    <p>Inside the &lt;kg-view-main&gt;'s content, you'll see five &lt;ng-container&gt; slots, each with one of following
+    <p>Inside the &lt;wuf-view-main&gt;'s content, you'll see five &lt;ng-container&gt; slots, each with one of following
         selectors:</p>
 
     <ul>
-        <li><strong>sidebarNavigation</strong>. This slot hosts the <a routerLink="/components/navigation">&lt;kg-navigation&gt;</a>
+        <li><strong>sidebarNavigation</strong>. This slot hosts the <a routerLink="/components/navigation">&lt;wuf-navigation&gt;</a>
             component.
         </li>
-        <li><strong>sidebarFooter</strong>. This slot hosts the <a routerLink="/components/navigation-footer">&lt;kg-sidebar-footer&gt;</a>
+        <li><strong>sidebarFooter</strong>. This slot hosts the <a routerLink="/components/navigation-footer">&lt;wuf-sidebar-footer&gt;</a>
             component.
         </li>
         <li><strong>toolbarContent</strong>. This slot hosts content to display in the header, including the application
@@ -109,23 +109,23 @@
     <caption>Contents of /src/app/internal/layouts/main/main.component.ts</caption>
 
     <p>Note that this component is fetching nav data from a service
-        <code>this.navService.getNavData(this.navDataUrl)</code> and then passing the returned .json object to the &lt;kg-navigation&gt;
+        <code>this.navService.getNavData(this.navDataUrl)</code> and then passing the returned .json object to the &lt;wuf-navigation&gt;
         component.</p>
 
     <hr>
 
     <h2>Basic Layout</h2>
 
-    <p>The file <code>/src/app/internal/layouts/basic/<strong>basic.component.html</strong></code> hosts the &lt;kg-view-basic&gt;
+    <p>The file <code>/src/app/internal/layouts/basic/<strong>basic.component.html</strong></code> hosts the &lt;wuf-view-basic&gt;
         component and looks like this:</p>
 
     <wuf-code-sample type="html" [code]="basicCodeHtml"></wuf-code-sample>
     <caption>Contents of /src/app/internal/layouts/basic/basic.component.html</caption>
 
-    <p>Unlike &lt;kg-view-main&gt;, the &lt;kg-view-basic&gt; component hosts only <strong>one</strong> slot: <strong>main</strong>.
-        As with the <strong>main</strong> slot in &lt;kg-view-main&gt;, this slot hosts &lt;router-outlet&gt;.</p>
+    <p>Unlike &lt;wuf-view-main&gt;, the &lt;wuf-view-basic&gt; component hosts only <strong>one</strong> slot: <strong>main</strong>.
+        As with the <strong>main</strong> slot in &lt;wuf-view-main&gt;, this slot hosts &lt;router-outlet&gt;.</p>
 
-    <p>The component code for &lt;kg-view-basic&gt; is similarly very simple:</p>
+    <p>The component code for &lt;wuf-view-basic&gt; is similarly very simple:</p>
 
     <wuf-code-sample type="typescript" [code]="basicCodeComponent"></wuf-code-sample>
     <caption>Contents of /src/app/internal/layouts/basic/basic.component.ts</caption>
