--- a/src/app/pages/branding-themes/themes/themes.component.html
+++ b/src/app/pages/branding-themes/themes/themes.component.html
@@ -119,7 +119,7 @@
     <p>When <a routerLink="/thems/colors">colors</a> are applied to a theme, all components within an application will
         pick up those colors automatically. As demonstrated by the example branding files at <code>/src/assets/dummydata/branding/brands</code>,
         we first declare SCSS variables in our <code>.scss</code> file for each of the colors in the <a
-            routerLink="/themes/colors">KION Color System</a> and then pass them into the <code>kg-theme-colors()</code>
+            routerLink="/themes/colors">KION Color System</a> and then pass them into the <code>wuf-theme-colors()</code>
         method as a SCSS map. Note that in order for CSS custom properties to work they must be bound to some object in
         the DOM. In the following, we're binding to the &lt;body&gt; tag because it more specific than the :root (i.e.,
         HTML element) tag that the default KION theme binds to, but generic enough to be easily overridden.</p>
@@ -137,7 +137,7 @@
 
     <h2>Define Brand Logo</h2>
 
-    <p>The <code>kg-theme-logo()</code> method allows you to override the default logo-related CSS custom properties for
+    <p>The <code>wuf-theme-logo()</code> method allows you to override the default logo-related CSS custom properties for
         the logo that appears in the application's header area. When creating a theme, you'll most likely also want to
         change the logo associated with that theme. This allows you to support multiple brands within the same
         application.</p>
@@ -158,7 +158,7 @@
 
     <h2>Define Button Radius</h2>
 
-    <p>The <code>kg-theme-logo()</code> method allows you to optionally override the default corner radius for
+    <p>The <code>wuf-theme-logo()</code> method allows you to optionally override the default corner radius for
         application buttons. View the <a routerLink="/themes/cssprops">Theme CSS Custom Properties page</a> for a list
         of generated CSS custom properties.</p>
 
@@ -174,7 +174,7 @@
 
     <h2>Define Font Styles (Typography)</h2>
 
-    <p>The <code>kg-theme-typography()</code> method allows you to optionally override the default font styling. View
+    <p>The <code>wuf-theme-typography()</code> method allows you to optionally override the default font styling. View
         the <a routerLink="/themes/cssprops">Theme CSS Custom Properties page</a> for a list of generated CSS custom
         properties.</p>
 
